--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring: #띄어쓰기 없음
 #        show_sql: true #띄어쓰기 8칸
         format_sql: true #띄어쓰기 8칸
 
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+
 logging.level: #띄어쓰기 없음
   org.hibernate.SQL: debug #띄어쓰기 2칸
   org.hibernate.orm.jdbc.bind: trace
