섹션1 API 개발 기본

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,22 @@
-spring: #띄어쓰기 없음
-  datasource: #띄어쓰기 2칸
-    url: jdbc:h2:tcp://localhost/~/jpashop #4칸
+spring:
+  datasource:
+    url: jdbc:h2:tcp://localhost/~/jpashop
     username: sa
     password:
     driver-class-name: org.h2.Driver
 
-  jpa: #띄어쓰기 2칸
-    hibernate: #띄어쓰기 4칸
-      ddl-auto: create #띄어쓰기 6칸
-    properties: #띄어쓰기 4칸
-      hibernate: #띄어쓰기 6칸
-#        show_sql: true #띄어쓰기 8칸
-        format_sql: true #띄어쓰기 8칸
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+#        show_sql: true
+        format_sql: true
 
   thymeleaf:
     prefix: classpath:/templates/
     suffix: .html
 
-logging.level: #띄어쓰기 없음
-  org.hibernate.SQL: debug #띄어쓰기 2칸
+logging.level:
+  org.hibernate.SQL: debug
   org.hibernate.orm.jdbc.bind: trace
