--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,12 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
 #        show_sql: true
         format_sql: true
+        default_batch_fetch_size: 100
 
   thymeleaf:
     prefix: classpath:/templates/
@@ -19,4 +20,4 @@ spring:
 
 logging.level:
   org.hibernate.SQL: debug
-  org.hibernate.orm.jdbc.bind: trace
+#  org.hibernate.orm.jdbc.bind: trace
